# VLM-Phototherapy-System

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  start-dev.bat  start-dev.ps1
backend/: pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: assessments.py  treatment_control.py  treatment_plans.py  treatment_records.py  users.py
backend/app/core/: bootstrap.py  config.py
backend/app/domain/: catalog.py
backend/app/domain/services/: assessment_service.py  treatment_control_service.py  treatment_plan_service.py  treatment_record_service.py  user_service.py
backend/app/infrastructure/db/: models.py  repositories.py  session.py
backend/app/infrastructure/hardware/: controller.py  mock_controller.py  protocol.py
backend/app/infrastructure/llm/: base.py  factory.py  gemini_client.py  prompt_builder.py  qwen_client.py  qwen_plan_client.py  treatment_plan_prompt_builder.py
backend/app/infrastructure/storage/: image_archive.py
backend/app/schemas/: assessment.py  control.py  treatment_plan.py  treatment_record.py  user.py
backend/tests/: test_prompt_builder.py  test_user_ids.py
backend/vlm_phototherapy_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
common/contracts/: skin_assessment_contract.json  treatment_control_contract.json  treatment_plan_contract.json  treatment_record_contract.json
common/knowledge/: skin_taxonomy.json  treatment_case_samples.json
common/prompts/: skin_assessment_system_prompt.md  (+1 more)
docs/: API.md
frontend/: index.html  package-lock.json  package.json
(+22 files in other folders)
